--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,7 +23,7 @@ env:
 
 
 jobs:
-  build:
+  build-dev:
 
     runs-on: ubuntu-latest
     permissions:
@@ -51,6 +51,72 @@ jobs:
         uses: docker/metadata-action@b127c18eb4bfbcffd584a3c2275832cb7fde9341
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=false
+            suffix=dev,onlatest=true
+          
+
+      # Build and push Docker image with Buildx (don't push on PR)
+      # https://github.com/docker/build-push-action
+      - name: Build and push Docker image
+        uses: docker/build-push-action@e06a3af40d8cc14b3bd54805391f880ba1fc11b5
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          taget: builder
+          outputs: |
+            type=docker,dest=/tmp/dev-image.tar
+            type=image
+      -
+        name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: dev
+          path: /tmp/dev-image.tar
+
+  build:
+
+    needs: build-dev
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # Login against a Docker registry except on PR
+      # https://github.com/docker/login-action
+      - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@2c6df6a22f32a796762dc6a9a7b044f8b3ea7f2d
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Extract metadata (tags, labels) for Docker
+      # https://github.com/docker/metadata-action
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@b127c18eb4bfbcffd584a3c2275832cb7fde9341
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          
+          
+          
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: dev
+          path: /tmp
+      - name: Load image
+        run: |
+          docker load --input /tmp/dev-image.tar
+
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
