--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -66,9 +66,8 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           target: builder
-          outputs: |
-            type=docker,dest=/tmp/dev-image.tar
-            type=image
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache-dev
+          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache-dev,mode=max
       -
         name: Upload artifact
         uses: actions/upload-artifact@v2
@@ -76,7 +75,7 @@ jobs:
           name: dev
           path: /tmp/dev-image.tar
 
-  build:
+  runner:
 
     needs: build-dev
     runs-on: ubuntu-latest
@@ -106,8 +105,6 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           
-          
-          
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
@@ -116,8 +113,8 @@ jobs:
       - name: Load image
         run: |
           docker load --input /tmp/dev-image.tar
-
-
+          
+          
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
@@ -128,3 +125,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           target: runner
+          cache-from: |
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache-dev
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache-run
+          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache-run,mode=max
