--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,6 +12,12 @@ on:
     branches: [ main ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
+    
+  workflow_run:
+    workflows: ["tag updates"]
+    branches: [main]
+    types: 
+      - completed
   pull_request:
     branches: [ main ]
 
