--- a/.github/workflows/npm-tag.yml
+++ b/.github/workflows/npm-tag.yml
@@ -17,6 +17,7 @@ jobs:
         
       - name: Check and tag
         uses: Klemensas/action-autotag@stable
+        env:
+          GITHUB_TOKEN: "${{ secrets.TRIGGER_GITHUB_TOKEN }}"
         with:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           tag_prefix: "v"
